--- a/www/templates/account/myorder.html
+++ b/www/templates/account/myorder.html
@@ -19,59 +19,38 @@
                  id="myorderlist">
     <ion-slide>
       <ion-content overflow-scroll="false" class="has-tabs-top stable-bg" has-bouncing="true">
-        <!--        <ion-refresher on-refresh="getSaleOrderList(0)" pulling-text="下拉刷新"></ion-refresher>-->
+        <ion-refresher on-refresh="getOrdersList(0)" pulling-text="下拉刷新"></ion-refresher>
         <p></p>
         <ion-list>
-          <ion-item class="row">
-            <h2 class="col">2016.12.11 14:57</h2>
-            <h2 class="col positive text-right">等待买家支付</h2>
-          </ion-item>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale stable-bg">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
-              class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
-          </a>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale stable-bg">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
-              class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
-          </a>
-          <ion-item class="item-divider light-bg text-right item-borderless">
-            <h2 class="grey">共 2 件商品 合计: <span class="assertive"> 1800.00 元</span></h2>
-          </ion-item>
-          <ion-item class="row row-horizontal-around item-borderless">
-            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small" ng-click="modal.show()">付款</button>
-          </ion-item>
+          <div ng-repeat="item in createdList ">
+            <ion-item class="row">
+              <h2 class="col">{{item.create_time * 1000 | date:'yyyy.MM.dd HH:mm'}}</h2>
+              <h2 class="col positive text-right">等待买家支付</h2>
+            </ion-item>
+            <a ng-repeat="items in item.goodsList" ng-href="#/productdetails/{{items.goods_id}}" nav-direction=forward
+               class="item item-thumbnail-left main-hot-sale stable-bg">
+              <img ng-src="{{items.image}}" alt="">
+              <h2>{{items.goods_name}}</h2>
+              <p class="text-wrap">{{items.goods_name}}</p>
+              <p class="row row-center"><span
+                class="col-75 energized">￥<strong>{{items.goods_price.split('.')[0] }}.</strong><span
+                class="energized">{{items.goods_price.split('.')[1] }}</span></span> <span class="item-note">数量 : {{items.goods_qty}}件</span>
+              </p>
+            </a>
+            <ion-item class="item-divider light-bg text-right item-borderless">
+              <h2 class="grey">共 1 件商品 合计: <span class="assertive"> {{item.real_amount}} 元</span></h2>
+            </ion-item>
+            <ion-item class="row row-horizontal-around item-borderless">
+              <button class="col-20 col-offset-50 button button-positive button-outline button-small " ng-click="cancelOrder(item.order_no)">取消订单</button>
+              <button class="col-20  button button-positive button-outline button-small" ng-click="modal.show()">付款
+              </button>
+            </ion-item>
+            <p></p>
+          </div>
         </ion-list>
-        <p></p>
-        <ion-list>
-          <ion-item class="row">
-            <h2 class="col">2016.12.11 14:57</h2>
-            <h2 class="col positive text-right">等待买家支付</h2>
-          </ion-item>
-          <a ng-href="#/productdetails" nav-direction=forward class="item item-thumbnail-left main-hot-sale stable-bg">
-            <img ng-src="img/main/cp@3.jpg" alt="">
-            <h2>都市型婴儿四轮推车遮阳车</h2>
-            <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
-              class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
-          </a>
 
-          <ion-item class="item-divider light-bg text-right item-borderless">
-            <h2 class="grey">共 1 件商品 合计: <span class="assertive"> 1800.00 元</span></h2>
-          </ion-item>
-          <ion-item class="row row-horizontal-around item-borderless">
-            <button class="col-20 col-offset-50 button button-positive button-outline button-small ">取消订单</button>
-            <button class="col-20  button button-positive button-outline button-small" ng-click="modal.show()">付款</button>
-          </ion-item>
-        </ion-list>
-        <!--        <ion-infinite-scroll  on-infinite="getSaleOrderList()" ng-if="sellparamstotal > sellparamspage" immediate-check="false">
-                </ion-infinite-scroll>-->
+        <ion-infinite-scroll on-infinite="getOrdersList()" ng-if="totalcreated > pagecreated" immediate-check="false">
+        </ion-infinite-scroll>
       </ion-content>
     </ion-slide>
     <ion-slide>
@@ -86,7 +65,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
@@ -108,7 +87,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
@@ -136,7 +115,7 @@
             <img ng-src="img/main/cp@3.jpg" alt="">
             <h2>都市型婴儿四轮推车遮阳车</h2>
             <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车车罩</p>
-            <p class="row row-center"><span class="col-75 energized">￥<strong >49.</strong><span
+            <p class="row row-center"><span class="col-75 energized">￥<strong>49.</strong><span
               class="energized">00</span></span> <span class="item-note">数量 : 1件</span></p>
           </a>
 
