元亨祥母婴商城

--- a/www/templates/modal/citymodal.html
+++ b/www/templates/modal/citymodal.html
@@ -8,7 +8,7 @@
     <div class="bar-light  item-input-inset ">
       <label class="item-input-wrapper">
         <i class="iconfont icon-seach placeholder-icon"></i>
-        <input type="search" class="full-image" ng-model="cityText"  placeholder="请输入城市中文名称或拼音">
+        <input type="search" class="full-image" ng-model="city.cityText"  placeholder="请输入城市中文名称或拼音">
       </label>
     </div>
     <div class="list city">
