--- a/www/templates/account/signin.html
+++ b/www/templates/account/signin.html
@@ -9,11 +9,11 @@
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" id="signin">
     <div class="row row-center light signin-header">
       <span  class="col text-right">如何赚积分</span>
-      <span class="col text-center"><span class="signin-day positive">
-        <p>已签到</p><p>50次</p> </span></span>
+      <span class="col text-center" ng-click="signIn()"><span class="signin-day positive">
+        <p>已签到</p><p>{{signInInfo.signIn}}次</p> </span></span>
       <span class="col text-left">如何花积分</span>
     </div>
-    <p class="text-center"><span class="integral-num">当前3650积分</span></p>
+    <p class="text-center"><span class="integral-num">当前 {{signInInfo.currentPoint}} 积分</span></p>
 
     <div class="card">
       <p class="row row-horizontal-around row-center text-center stable-bg"><span class="col-10">  <i
