--- a/www/templates/main/revieworder.html
+++ b/www/templates/main/revieworder.html
@@ -35,7 +35,7 @@
   <ion-footer-bar class="shoppingcart-footer-bar">
     <div class="row row-no-padding row-center  ">
       <span class="col-60 padding-left">总金额 :<span class="assertive">￥ <strong>{{reviewOrder.goodsAmount.toString().split('.')[0] }}.</strong><i>{{reviewOrder.goodsAmount.toString().split('.')[1] }}</i></span></span>
-      <button  ng-click="submitOrder()"  class="col button  button-assertive"><strong>提交订单</strong></button>
+      <button ng-disabled="deliveryAddress==null" ng-click="submitOrder()"  class="col button  button-assertive"><strong>提交订单</strong></button>
     </div>
   </ion-footer-bar>
 </ion-view>
