--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
           <span class="input-label icon ion-android-phone-portrait"> 手机号 </span>
           <input type="number" placeholder="请输入手机号码" ng-model="user.mobile" check-form
                  ng-blur="checkForm(user.mobile,'手机号输入不正确','mobilephone','')"
-                 ng-maxlength="11" required/>
+                 required/>
         </label>
 
         <label class="item item-input">
