--- a/www/templates/account/evaluate.html
+++ b/www/templates/account/evaluate.html
@@ -6,27 +6,27 @@
   <ion-nav-title>
     <h1 class="title">评价</h1>
   </ion-nav-title>
-  <form name="evaluate">
+  <form name="evaluateform">
     <ion-content overflow-scroll="false" class="has-button-footer stable-bg" has-bouncing="true" id="evaluate">
       <div class="list padding-top list-borderless">
         <a ng-href="" class="item item-thumbnail-left ">
-          <img ng-src="img/main/1.png" class="border-radius-50" alt="" >
-          <h2 >描述相符</h2>
+          <img ng-src="{{evaluate.image}}" class="border-radius-50" alt="" >
+          <h2 >{{evaluate.goods_name}}</h2>
           <p>
-            <i ng-class="{true:'positive',false:'grey'}[true]" class="icon ion-star"></i>
-            <i ng-class="{true:'positive',false:'grey'}[true]" class="icon ion-star"></i>
-            <i ng-class="{true:'positive',false:'grey'}[true]" class="icon ion-star "></i>
-            <i ng-class="{true:'positive',false:'grey'}[true]" class="icon ion-star "></i>
-            <i ng-class="{true:'positive',false:'grey'}[false]" class="icon ion-star "></i></p>
+            <i ng-class="{true:'positive',false:'grey'}[evaluateinfo.star>=1]" ng-click="evaluatestar(1)" class="icon ion-star"></i>
+            <i ng-class="{true:'positive',false:'grey'}[evaluateinfo.star>=2]" ng-click="evaluatestar(2)" class="icon ion-star"></i>
+            <i ng-class="{true:'positive',false:'grey'}[evaluateinfo.star>=3]" ng-click="evaluatestar(3)" class="icon ion-star "></i>
+            <i ng-class="{true:'positive',false:'grey'}[evaluateinfo.star>=4]" ng-click="evaluatestar(4)" class="icon ion-star "></i>
+            <i ng-class="{true:'positive',false:'grey'}[evaluateinfo.star>=5]" ng-click="evaluatestar(5)"class="icon ion-star "></i></p>
         </a>
         <label class="item item-input card item-borderless">
           <textarea rows="5" ng-model="evaluateinfo.Memo" placeholder="分享您的购买新的" ng-maxlength="300" required></textarea>
         </label>
       </div>
-      <div class="padding-right text-right positive"><i class="icon ion-ios-camera camera"></i></div>
+      <div class="padding-right text-right positive"><i class="icon ion-ios-camera camera" ng-click="uploadActionSheet()" ></i></div>
     </ion-content>
     <div class="padding light-bg bottom-0" keyboard-attach>
-      <a class="button button-positive  full-image" ng-disabled="!evaluate.$valid" ng-click="submitevalute()">提交评价</a>
+      <a class="button button-positive  full-image" ng-disabled="!evaluateform.$valid" ng-click="submitevalute()">提交评价</a>
     </div>
   </form>
 </ion-view>
