--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,7 +11,7 @@ navigation history that also transitions its views in and out.
 
   <!-- 分类Tab -->
   <ion-tab title="分类" icon-off="iconfont icon-viewgallery" icon-on="iconfont icon-viewgallery"
-            href="#/tab/classify">
+            href="#/tab/classify/0">
     <ion-nav-view name="tab-classify"></ion-nav-view>
   </ion-tab>
 
