元亨祥母婴商城

--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -68,19 +68,33 @@
         </a>
       </div>
       <div class="row    row-center ">
-        <a ng-href="#/contactus" nav-direction=forward class="col padding-top border-r"><img
+        <a ng-href="#/contactus" nav-direction=forward class="col padding-top border-rb"><img
           ng-src="img/account/contactus.png" alt="">
           <p>联系客服</p>
         </a>
-        <a ng-href="#/signin" nav-direction=forward class="col padding-top border-r"><img
+        <a ng-href="#/signin" nav-direction=forward class="col padding-top border-rb"><img
           ng-src="img/account/data.png" alt="">
           <p>每日签到</p>
         </a>
-        <a ng-href="#/questionnaire" nav-direction=forward class="col padding-top "><img
+        <a ng-href="#/questionnaire" nav-direction=forward class="col padding-top border-b"><img
           ng-src="img/account/opinion.png" alt="">
           <p>问卷调查</p>
         </a>
       </div>
+      <div class="row    row-center ">
+        <a ng-href="#/collect" nav-direction=forward class="col padding-top border-r"><img
+          ng-src="img/account/order.png" alt="">
+          <p>我的收藏</p>
+        </a>
+        <a ng-href="" nav-direction=forward class="col padding-top ">
+
+        </a>
+        <a ng-href="" nav-direction=forward class="col padding-top ">
+
+        </a>
+      </div>
+    </div>
+
     </div>
     <p class="padding-top"></p>
     <div class="padding">
